# EOS-Dotfiles

./: .gitignore  .stow-local-ignore  CMakeLists.txt  README.md
.config/: starship.toml
.config/btop/: btop.conf
.config/btop/themes/: marcyra.theme
.config/fish/: config.fish
.config/fish/completions/: marcyra.fish
.config/fish/functions/: fish_greeting.fish
.config/foot/: foot.ini
.config/hypr/: hyprland.conf
.config/hypr/scheme/: current.conf
.config/hypr/settings/: animations.conf  appearance.conf  autostart.conf  defaults.conf  env.conf  input.conf  keybinds.conf  misc.conf  monitor.conf  plugins.conf  rules.conf
.config/quickshell/config/: Config.qml
.config/quickshell/marcyra/: shell.qml
.config/quickshell/marcyra/components/: Anim.qml
.config/quickshell/marcyra/config/: AppearanceConfig.qml
.config/quickshell/marcyra/modules/background/: Background.qml  Wallpaper.qml
.config/quickshell/marcyra/plugin/: CMakeLists.txt
.config/quickshell/marcyra/services/: Wallpapers.qml
.config/quickshell/marcyra/utils/: Paths.qml
.config/quickshell/modules/background/: Background.qml  Wallpaper.qml
.config/quickshell/plugin/src/Marcyra/: CMakeLists.txt  cutils.cpp  cutils.hpp
.config/quickshell/plugin/src/Marcyra/Models/: filesystemmodel.cpp
.config/spicetify/: config-xpui.ini
.config/spicetify/Themes/marcyra/: color.ini  user.css
cli/: README.md  pyproject.toml
cli/src/marcyra/: __init__.py  __main__.py  parser.py
cli/src/marcyra/data/templates/: discord.scss  qtct.conf  qtdark.colors  qtlight.colors  spicetify-dark.ini  spicetify-light.ini  warp.yaml
cli/src/marcyra/subcommands/: scheme.py  shell.py  wallpaper.py
cli/src/marcyra/utils/: buckets.py  colourfulness.py  notify.py  paths.py  scheme.py  theme.py
cli/src/marcyra/utils/material/: __init__.py  generator.py
scripts/: wallpapers.sh
(+2 files in other folders)
